.docker/staging-k8s/app-deployment-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml -f docker-compose.dev.yml convert --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yml -f docker-compose.dev.yml convert --volumes hostPath
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: app
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
        - env:
            - name: DATABASE_URL
              value: postgresql://postgres:arclight@db/arclight
            - name: FINDING_AID_DATA
              value: /opt/app-data
            - name: GOOGLE_ANALYTICS_DEBUG
              value: "false"
            - name: RAILS_ENV
              value: development
            - name: REDIS_URL
              value: redis://redis:6379
            - name: SOLR_URL
              value: "http://$(SOLR_SERVICE_HOST):$(SOLR_SERVICE_PORT)/solr/arclight"
          image: estythomas/umich-arclight-staging:20220112.1
          imagePullPolicy: Always
          name: app
          ports:
            - containerPort: 3000
          resources: {}
          command: ["/bin/bash", "-c"]
          args:
            - /usr/libexec/s2i/run rails-server
          volumeMounts:
            - mountPath: /opt/app-data
              name: ead-data
      restartPolicy: Always
      volumes:
        - name: ead-data
          persistentVolumeClaim:
            claimName: ead-data
status: {}
