.docker/staging-k8s/solr-deployment-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml -f docker-compose.dev.yml convert --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: solr
  name: solr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: solr
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yml -f docker-compose.dev.yml convert --volumes hostPath
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: solr
    spec:
      containers:
#        - command:
#            - docker-entrypoint.sh
#            - solr-precreate
#            - arclight
#            - /solr_config
        - image: estythomas/umich-arclight-solr-staging:20220106.4
          imagePullPolicy: Always
          name: solr
          ports:
            - containerPort: 8983
          resources: {}
      restartPolicy: Always
status: {}
